# Tomato-Novel-Downloader

./: .dockerignore  .gitattributes  .gitignore  AI_NOT_FIX_CASES.md  Cargo.toml  Cargo_no_official.toml  Dockerfile  Dockerfile.webui  Dockerfile.webui.musl  LICENSE  MAINTAINING.md  NEW_FEATURES.md  PULL_REQUEST.md  README.md  Test.bat  build.rs  chapter_template.txt  docker-entrypoint-webui.sh  installer.sh  main.py  requirements.txt  test.json
.github/: docker-build.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc.yml  feature_request.yml  issue_report.yml  other.yml  question.yml  update.yml
.github/workflows/: build-docker.yml  build-executable-nuitka.yml  build-executable.yml  build-for-alpine.yml  build-rust.yml  docker-build.yml  docker-webui.yml  issue-assistant.yml  pr-review.yml  quality.yml  refresh-build-on-dispatch.yml
novel_src/: book_manager.py  constants.py  context.py  downloader.py  epub_generator.py  log_system.py  main.py  network.py  old_main.py  parser.py  storge_system.py  update.py
novel_src/api/: __init__.py
novel_src/api/base_system/: __init__.py
novel_src/api/book_parser/: __init__.py
novel_src/api/network_parser/: __init__.py
novel_src/base_system/: context.py  log_system.py  progress.py  storage_system.py  storge_system.py
novel_src/book_parser/: audio_generator.py  book_manager.py  epub_generator.py  finalize_utils.py  parser.py  segment_utils.py
novel_src/network_parser/: downloader.py  media_downloader.py  network.py  review_parser.py  spawn_data.py  visit_model.py
novel_src/offical_tools/: TTEncrypt.py  downloader.py  epub_downloader.py  get_iid.py  get_version_code.py
novel_src/text_postprocess/: __init__.py  llm_adapter.py  model_manager.py  processor.py
scripts/: maintain.ps1  maintain.sh
src/: main.rs  prewarm_state.rs
src/base_system/: app_update.rs  book_id.rs  book_paths.rs  config.rs  context.rs  cooldown_retry.rs  download_history.rs  file_cleaner.rs  json_extract.rs  logging.rs  mod.rs  novel_updates.rs  self_update.rs
src/book_parser/: audio_generator.rs  book_manager.rs  edge_tts.rs  epub_generator.rs  finalize_epub.rs  finalize_pdf.rs  finalize_utils.rs  html_utils.rs  image_utils.rs  media_downloader.rs  mod.rs  parser.rs  segment_comments.rs  segment_shared.rs  segment_utils.rs
src/download/: downloader.rs  mod.rs  models.rs  plan.rs  progress.rs  segment_pool.rs  third_party.rs
src/network_parser/: mod.rs  network.rs
src/ui/: mod.rs  noui.rs  tui.rs
src/ui/noui/: app_update.rs  config.rs  download.rs  history.rs  mod.rs  update.rs
src/ui/tui/: about.rs  clipboard.rs  config.rs  config_model.rs  cover.rs  download.rs  history.rs  home.rs  mod.rs  preview.rs  update.rs
src/ui/web/: mod.rs  router.rs  state.rs  templates.rs
src/ui/web/routes/: app_update.rs  auth.rs  download.rs  history.rs  index.rs  jobs.rs  library.rs  mod.rs  preview.rs  search.rs  status.rs  updates.rs
src/ui/web/templates/: app.css  app.js  index.html
tools/: migrate_covers.py
