[package]
name = "tomato-novel-downloader"
version = "2.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "registry", "time"] }
tracing-appender = "0.2"
ctrlc = "3.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
regex = "1.11"
ratatui = "0.27"
crossterm = "0.27"
indicatif = "0.17"
arboard = "3.4"

# 直接复用本 workspace 的 Official-API（内部会通过 FFI 加载 Network-Core 动态库）
tomato-novel-official-api = { path = "Tomato-Novel-Official-API", features = ["full_api"] }

# EPUB（最小实现：章节文本 -> epub）
epub-builder = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
