[package]
name = "tomato-novel-downloader"
version = "2.0.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "registry", "time"] }
tracing-appender = "0.2"
crossbeam-channel = "0.5"
ctrlc = "3.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
regex = "1.11"
ratatui = "0.27"
crossterm = "0.27"
indicatif = "0.17"
arboard = "3.4"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
msedge-tts = "0.2.4"
textwrap = "0.16"
epub-builder = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tomato-novel-official-api = { path = "../Tomato-Novel-Official-API" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-core = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = false
panic = "unwind"
strip = "symbols"
incremental = false